# NotebookUM

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  NotebookUM.code-workspace  QUICKSTART.md  README.md  TDD_SUMMARY.txt  app.py  check_docling.py  config.py  docker-compose.yml  example_usage.py  menu.html  pyproject.toml  run_tdd_tests.py  run_tests.bat  test_manual.html  verify_exceptions.py  verify_pdf_extractor.py
.agents/skills/: skills.md
app/: __init__.py
app/controllers/: __init__.py  ai_controller.py  example_controller.py  file_controller.py  functionality_controller.py
app/models/: database.py  functionality_model.py
app/services/: file_validator.py  functionality_service.py  pdf_extractor.py
app/utils/: exceptions.py
docker/: docker-compose.yml
docs/: CRUD_TESTS_DOCUMENTATION.md  PDF_TEXT_EXTRACTION.md  PDF_VALIDATOR.md  TDD_PDF_EXTRACTION_SUMMARY.md
scripts/: run_exception_tests.bat  verify_installation.bat
src/: example_pdf_extraction.py
tests/: test_ai_service.py  test_database.py  test_example.py  test_file_endpoint.py  test_file_validator.py  test_functionality_endpoint.py  test_pdf_extractor.py
