[project]
name = "notebookum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling==2.85.0",
    "fastapi==0.135.3",
    "openai>=2.29.0",
    "psycopg2-binary>=2.9.12",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.35.0",
]



